# rust-shellcode-weaponized

./: .gitignore  Cargo.toml  README.md
asm/: Cargo.toml
asm/src/: main.rs
create_fiber/src/: main.rs
create_process/src/: main.rs
create_remote_thread/: Cargo.toml
create_remote_thread/src/: main.rs
create_thread/: Cargo.toml
create_thread/src/: main.rs
early_bird/src/: main.rs
early_bird_mod/: Cargo.toml
early_bird_mod/src/: main.rs
memmap2_transmute/src/: main.rs
